# kdt-ai-2-team3-advanced

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/: copilot-instructions.md
after data augmentation/: .gitignore  README.md  analyze_encoder_errors.py  compare_thresholds.py  encoder_analysis_utils.py  evaluate_aug100_validation.py  evaluate_aug50_validation.py  evaluate_keyword_challenge_set.py  generate_v3_hard_examples.py  run_kcelectra_retrain_experiments.py  train_aug100_final.py  train_aug50_final.py
ai_monitoring/: .env.example  .gitignore  README.md  pyproject.toml
ai_monitoring/src/ai_monitoring/: __init__.py  basic_trace.py  config.py  rag_trace.py
ai_service/: .env.example  .gitignore  Dockerfile  README.md  dockerfile_comment.txt  pyproject.toml
ai_service/decoder/: README.md
ai_service/decoder/evaluation/: few_shot_explan.py
ai_service/docs/: rag_llm_comparison.md
ai_service/encoder/: .gitignore  README.md
ai_service/encoder/hf_upload/: README.md
ai_service/encoder/results/: README.md
ai_service/encoder/results/comparison/: best_params.json  experiment_comparison_final.csv  optuna_summary.json
ai_service/encoder/results/focal_no_oversampling/: test_metrics.json
ai_service/encoder/training/: requirements.txt  run_kcelectra_retrain_experiments.py  visualize_experiment_results.py
ai_service/src/ai_service/: __init__.py  main.py  run_eval.py
ai_service/src/ai_service/api/: __init__.py  routes.py
ai_service/src/ai_service/config/: __init__.py  prompts.py  settings.py
ai_service/src/ai_service/core/: README.md  __init__.py  graph.py  nodes.py  singleton_llm.py  state.py  tools.py
ai_service/src/ai_service/data/: evaluation_report.csv  evaluation_report_deepseek_r1_8b_golden30.csv  evaluation_report_exaone3_5_7_8b_5cases.csv  evaluation_report_exaone3_5_7_8b_golden30.csv  evaluation_report_gemma3_12b_golden30.csv  evaluation_report_llama3_1_8b_5cases.csv  evaluation_report_mistral_7b_5cases.csv  evaluation_report_phi4_14b_golden30.csv  evaluation_report_qwen2_5_7b_5cases.csv  evaluation_report_qwen2_5_7b_golden30.csv  evaluation_report_qwen3_14b_5cases.csv  evaluation_report_qwen3_5_9b_5cases.csv  evaluation_report_qwen3_5_9b_golden30.csv  evaluation_report_qwen3_8b_5cases.csv  evaluation_report_qwen3_8b_golden30.csv  golden_dataset.json  golden_dataset_30.jsonl  rag_llm_comparison_cases.csv
ai_service/src/ai_service/evaluation/: __init__.py  evaluator.py  metrics.py
ai_service/src/ai_service/models/: __init__.py  client.py  embeddings.py  model_configs.py
ai_service/src/ai_service/reranker/: __init__.py
ai_service/src/ai_service/schema/: __init__.py  graph.py  routes.py  vectordb.py
ai_service/src/ai_service/services/: __init__.py
ai_service/src/ai_service/utils/: is_prod.py  json_utils.py  langfuse_init.py  rag_content.py  save_golden_dataset.py
ai_service/src/ai_service/vectordb/: base.py  chroma_client.py  pinecone_client.py  service.py
ai_service/tests/: conftest.py  test_api_routes.py  test_core_graph.py
ai_service_deploy/: README.md  pyproject.toml
ai_service_deploy/docs/: backend_connection.md  rag_app_debugging.md  vLLM_logs.md  vLLM_related_knowledges.md
ai_service_deploy/src/ai_service_deploy/: __init__.py  llm_app.py  modal_example.py  model_app.py  rag_app.py  vLLM_logs.md
ai_sevice_deploy/: README.md  pyproject.toml
backend/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
datatest/: Dockerfile  PR_DESCRIPTION.md  README.md  main.py  pyproject.toml  requirements.scheduler.txt  (+1 more)
datatest/test-code/: .gitignore  README.md  pyproject.toml  requirements.txt  web_rag_test.jsonl
datatest/test-code/demo/: README.md  config.py
datatest/test-code/demo/01_url_crawler/: run.py
datatest/test-code/demo/02_web_crawler/: run.py
datatest/test-code/demo/03_virustotal/: run.py
datatest/test-code/demo/04_vector_db/: run.py
datatest/test-code/demo/05_web_to_rag/: run.py
datatest/test-code/demo/06_scheduler/: run.py
datatest/test-code/demo/07_dashboard/: run.py
datatest/test-code/infra/: docker-compose.yml
datatest/test-code/infra/mysql/: init.sql
datatest/test-code/pipeline/: Dashboard.py  Logger.py  README.md  __init__.py  _clients.py  config.py  crawler.py  integration_test.py  logger.py  meta_builder.py  mysql_io.py  preprocessor.py  s3_io.py  sample_upload.jsonl  scheduler.py  schema.py  seed_chroma.py  seed_pinecone.py  vector_io.py  virustotal_io.py  web_crawler.py
datatest/test-code/pr/: rag_pipeline_pr.md
datatest/test-code/scripts/: populate_v01.py
datatest/test-code/tests/: test_batch.py  test_chroma.py  test_crawler.py  test_mysql.py  test_s3.py  test_scheduler.py  test_virustotal.py
(+324 files in other folders)
