[project]
name = "ai-monitoring"
version = "0.1.0"
description = "LLM observability & monitoring with langfuse"
readme = "README.md"

requires-python = "==3.12.*"
dependencies = [
    "langfuse>=2.0.0",
    "openai>=1.0.0", # test용 임시 클라이언트
    "python-dotenv>=1.2.2",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.14.1"
]

[project.scripts] # uv run ai_monotoring
ai_monotoring = "ai_monotoring:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [ # 개발용 의존성
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0"
]

[tool.pytest.ini_options]
pythonpath=["src"] # 파이썬 import용
testpaths = ["tests"]           # 테스트 파일을 찾을 기본 디렉터리
python_files = "test_*.py"      # 인식할 파일 패턴
addopts = "-v --durations=10"   # 기본 옵션 (상세 출력, 느린 테스트 표시 등)
