[project]
name = "ai-service"
version = "0.1.0"
description = "ai decoder service with llm + rag"
readme = "README.md"

requires-python = ">=3.12,<3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.124.0",
    "langchain>=1.3.4",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.4",
    "langchain-community<0.4.0",
    "langfuse>=4.0.0", # 주의: self-hosted runner는 v3이하로 해야됨
    "openai>=1.0.0",
    "pinecone>=9.1.0",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "ragas==0.3.9",
    "rapidfuzz>=3.14.5",
    "sentence-transformers>=5.1.2",
    "uvicorn>=0.38.0",
    "typing-extensions>=4.12.2",
]

[project.scripts]
ai-service = "ai_service.main:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [ # 개발용 의존성
    "pytest>=9.0.3",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
pythonpath=["src"] # 파이썬 import용
testpaths = ["tests"]           # 테스트 파일을 찾을 기본 디렉터리
python_files = "test_*.py"      # 인식할 파일 패턴
addopts = "-v --durations=10"   # 기본 옵션 (상세 출력, 느린 테스트 표시 등)
