[project]
name = "smishing-test-setup"
version = "0.1.0"
description = "ChromaDB + ko-sroberta 동작 확인용 최소 테스트 환경"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.5.0",
    "sentence-transformers>=2.5.0",
    "boto3>=1.34.0",
    "pymysql>=1.1.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
]



[tool.uv.workspace]
members = [
    "smishing-test",
]

[tool.uv]
  package = false
